create github pages

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/z">best css templates</a></section><section class="header9 cid-rE44H2LRes mbr-fullscreen mbr-parallax-background" id="header9-1">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header9 cid-rE44H2LRes mbr-fullscreen mbr-parallax-background" id="header9-1">
 
     
 
@@ -70,10 +70,10 @@
     <div class="container">
         <div class="media-container-column mbr-white col-lg-8 col-md-10">
             <h1 class="mbr-section-title align-left mbr-bold pb-3 mbr-fonts-style display-1">
-                <br><br>Kailey Draws</h1>
+                <br>Kailey Draws</h1>
             <h3 class="mbr-section-subtitle align-left mbr-light pb-3 mbr-fonts-style display-2">Hand drawn portraits of pets and animals</h3>
-            <p class="mbr-text align-left pb-3 mbr-fonts-style display-5"></p><p>
-                &nbsp;&nbsp;&nbsp;&nbsp;I am &nbsp;Kailey Fry, MFA. I love to draw animals, especially your pets. It's as simple as sending me a photo of your loved critter companion that you would like hand drawn, and specifying how you would like to receive it.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp; &nbsp; My prints make great gifts for loved ones, christmas cards, or even as a featured piece in your home. Anything from wallet-size to wall mounted.</p><p><span style="font-size: 1.5rem;">&nbsp; &nbsp; &nbsp;In addition to providing high-quality prints, you can also get a digital-only copy of your comissioned work for as little as $50 if you would prefer to print it yourself. (All prints include access to full-resolution digital copies as well) &nbsp;&nbsp;</span></p><p></p>
+            <p class="mbr-text align-left pb-3 mbr-fonts-style display-5"></p><p></p><p>
+                &nbsp;&nbsp;&nbsp;&nbsp;I am &nbsp;Kailey Fry, MFA. I love to draw animals, especially your pets. It's as simple as sending me a photo of your loved critter companion that you would like hand drawn, and specifying how you would like to receive it.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<br>&nbsp; &nbsp; My prints make great gifts for loved ones, christmas cards, or even as a featured piece in your home. Anything from wallet-sized to wall mounted.<br> &nbsp; &nbsp;&nbsp;</p><p>&nbsp;&nbsp;&nbsp;&nbsp;In addition to providing high-quality prints, you can also get a digital-only copy of your comissioned work for only $50 if you would prefer to print it yourself. (All prints include access to full-resolution digital copies as well) &nbsp;&nbsp;</p><p></p><p></p>
             <div class="mbr-section-btn align-left"><a class="btn btn-md btn-primary display-4" href="index.html#counters6-9">Order Prints</a>
                 <a class="btn btn-md btn-black-outline display-4" href="index.html#gallery1-8">Gallery</a></div>
         </div>
