create github pages

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header9 cid-rE44H2LRes mbr-fullscreen mbr-parallax-background" id="header9-1">
+<section class="engine"><a href="https://mobirise.info/e">make a website for free</a></section><section class="header9 cid-rE44H2LRes mbr-fullscreen mbr-parallax-background" id="header9-1">
 
     
 
@@ -116,7 +116,7 @@
                             <div class="card-text">
                                 <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">E-mail Me</h4>
                                 <p class="mbr-content-text mbr-fonts-style display-7">
-                                    Simply shoot me an e-mail and attach the picture(s) you would like me to draw.<br>kaileyfry@gmail.com</p>
+                                    Simply shoot me an e-mail and attach the picture(s) you would like me to draw, and I'll get back to you with a quote.<br>kaileyfry@gmail.com</p>
                             </div>
                         </div>
                     </div>
@@ -128,7 +128,7 @@
                             <div class="card-text">
                                 <h4 class="mbr-content-title mbr-bold mbr-fonts-style display-7">Kailey Draws</h4>
                                 <p class="mbr-content-text mbr-fonts-style display-7">
-                                    I'll draw your precious pet and send you a digital file. If you like what you see, let me how many prints you would like and at what size.&nbsp;</p>
+                                    I'll draw your precious pet and send you a digital file. If you like what you see, let me know how many prints you would like and at what size.&nbsp;</p>
                             </div>
                         </div>
                     </div>
