--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-success text-primary display-4" href="index.html#top" aria-expanded="false">Home<div class="line-animation"></div></a></li>
                     
-                    <li class="nav-item"><a class="nav-link link text-success text-primary display-4" href="index.html#gallery2-v" aria-expanded="false">Galleries<br><div class="line-animation"></div></a></li><li class="nav-item"><a class="nav-link link text-success text-primary display-4" href="index.html#form1-1b" aria-expanded="false">Contact<br><div class="line-animation"></div></a></li></ul>
+                    <li class="nav-item"><a class="nav-link link text-success text-primary display-4" href="index.html#gallery2-v" aria-expanded="false">Galleries<br><div class="line-animation"></div></a></li><li class="nav-item"><a class="nav-link link text-success text-primary display-4" href="index.html#form1-d" aria-expanded="false">Contact<br><div class="line-animation"></div></a></li></ul>
 
                 
             </div>
@@ -393,7 +393,7 @@
                         Message me with a description of the type of drawing you are looking for. Every drawing is customized for your needs along with a digital file that you will have full ownership over. I look forward to hearing from you!<br><br><strong>Note: I have had some issues with the form not working in the past. If you reach out and don't hear back within 48 hours, please email me directly at <u><a href="mailto:kaileyfry@gmail.com" class="text-info">kaileyfry@gmail.com</a></u></strong></p>
                     <div class="mbr-form" data-form-type="formoid">
                         <!--Formbuilder Form-->
-                        <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="0kB3sO4Bf1Nnic9hF3cdqJ308qZQdvoV8/gBx2XWsl7ZdY0ddnahBczz36+JgDnW2L3lOXTqANRXyF+lFlUCjF1m2YxcCvnbLsZ1KE88LXNRE2ZDIIALi30K6/3dfZ+O.hsM7UCcDMrFUM80Sx7kCFVrVEHmGwxjceyylAJ1c4JchnAWcjaAtY7sJwWr7CRm/TW5vNHhhXyc2lKTYX7fo4q64bcjyhWCYdxsHwufYtv5+hbP3tgLORAMtQUvdiStr">
+                        <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Mk8kNAMpmgOmoOeOGTGYVpCVlbU8/PIJVKDErW3FBYwc5Pt8tsRfYvHGSNw7YFbBIeKOrS3sn3vsEWAHgSRMZgaER5qOR7mLM9bznU8UNvJjraosUzaUcnv01VR/UOyY.PbSoY3hi66vwq/vpgvVtHcx3MPXMc+Ps8pDUZJH0eARpTXOy7e2HNcEJb6F2YrzwtSHNTia7UE1LRtfGmdOpSFwLHjgd2NySgeTFsDGWXoyC6lJulPxK7BrwCY+heOTg">
                             <div class="form-row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for
                                     filling out the form!</div>
