--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="assets/images/index-meta.png">
   <meta name="twitter:title" content="Home">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/img-381-96x96.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/kailey.lol-logo-transparent-51x51.png" type="image/x-icon">
   <meta name="description" content="">
   
   
@@ -43,7 +43,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="#">
-                        <img src="assets/images/img-381-96x96.png" alt="" style="height: 3rem;">
+                        <img src="assets/images/kailey.lol-logo-transparent-51x51.png" alt="" style="height: 3rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-success text-primary display-5" href="index.html#top">Kailey Draws</a></span>
@@ -76,7 +76,7 @@
         <div class="container-fluid">
             <div class="row justify-content-center">
                 <div class="right-side col-12 col-md-4">
-                    <img src="assets/images/img-381-1451x1451.png" alt="">
+                    <img src="assets/images/kailey.lol-logo-transparent-969x969.png" alt="">
                 </div>
                 <div class="left-side col-12 col-md">
                     
@@ -100,8 +100,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h3 class="mbr-section-subtitle mbr-fonts-style display-7">
-                    News</h3>
+                <h3 class="mbr-section-subtitle mbr-fonts-style display-7"></h3>
                 <h3 class="mbr-section-title mbr-fonts-style display-1">Check out my Etsy Shop<br><a href="https://www.etsy.com/shop/KaileyFry" class="text-danger" target="_blank"><strong>HERE</strong></a></h3>
             </div>
         </div>
@@ -410,7 +409,7 @@
                         Message me with a description of the type of drawing you are looking for. Every drawing is customized for your needs along with a digital file that you will have full ownership over. I look forward to hearing from you!<br><br><strong>Note: I have had some issues with the form not working in the past. If you reach out and don't hear back within 48 hours, please email me directly at <u><a href="mailto:kaileyfry@gmail.com" class="text-info">kaileyfry@gmail.com</a></u></strong></p>
                     <div class="mbr-form" data-form-type="formoid">
                         <!--Formbuilder Form-->
-                        <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="VursTnCCT+7aQS9lwGwlNWM5yzYot7lhROuYrjp40cLw4hfTsuuSnZzEYye2CmOe1esnrQ/zmBGmkLK2cnvMsv3GC+xZcYzSmOpA6kVaaypN0vumfU22OKK44p8/EjUu.WAqCS4c/Qkgn8yCbXoDPOfuWrJSk5knibLHHVASq2NxUTHWBo/Gc+bUs2QvyioqeVCpwBs0291/dkdlxblPuwsJG/z1TAu9DNHpzE1adguQMVPXQ/egAo5qax8K3gK7m">
+                        <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="DJgPwiPGlxL32mRcYmK/FOr/AWso4Y4zh2zARW86VY3U56FVBq4auazEoYLt+vNq5HQGzgALAx8RzWf8K4/FQ/dTPLCT/oJW/sl9Aemzkz5eFUYRoa2YV+ida3jdw/GA.RMJZwT5+O94OKyxZqVCj3bnSiMjUnXruAa61P1dVYcwysVHc4nk1UJTtKueufFoi6ChvCZoQDil0uZTLHDpCybn6Epw7xtmcRmN6fS2ThvuiFBsyit1J0Ne61Dfyy1bK">
                             <div class="form-row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for
                                     filling out the form!</div>
